# RTFS

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  repos.json  run.py
rtfs/: __init__.py  app.py  fuzzy.py  index.py  indexer.py  node.py
rtfs/_types/: __init__.py  repo_config.py  results.py
