[tool.poetry]
name = "rtfs"
version = "0.1.0"
description = "A small API that parses the source code of libraries to provide a quick and easy source viewing"
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = { version = "*", extras = ["standard"] }
yarl = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
typing-extensions = "*"

[tool.ruff]
target-version = "py312"
line-length = 125
exclude = ["repos", ".venv/"]

[tool.ruff.lint]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "PLR2004",
    "RUF001",
    "RUF009",
    "SIM105",
    "S101",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]
exclude = ["repos/"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = ["repos", ".venv/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
